# Gurme-Yazilim-Paketi

./: .env  .gitignore  README.md  URL.js  index.html  package-lock.json  package.json  server.js  vite.config.js.timestamp-1702705420670.mjs
Dökümanlar/: Sprint_01.01.docx  Sprint_13.12.docx  Sprint_21.12.docx  fizibilite_calismasi.docx  gereksinim_raporu.doc  soru.txt
URL/: server.js  url.js
config/: allowedOrigins.js  corsOptions.js
rest/: Cargo.toml
rest/src/: main.rs
src/: App.css  App.jsx  AuthProvider.jsx  PrivateRoute.jsx  api.js  authController.js  express.js  index.css  index.js  main.jsx
src/Charts/: dataJS.js
src/Charts/CategoryAnalyzePage/: CategoryAnalyze.css  CategoryAnalyzeComponents.jsx  CategoryAnalyzePage.jsx  dateRangeForCategory.jsx  getInputAutocomplete.jsx
src/Charts/Data/: dataJS.js
src/Charts/ProductAnalyzePage/: ProductAnalyzePage.jsx  dateRangeProduct.jsx  productAnalyze.jsx
src/Charts/StockAnalyze/: StockAnalyze.jsx
src/Datapage/: datapage.jsx
src/HomePage/: Homepage.jsx
src/HomePage/Container/: Container.jsx  (+1 more)
src/Login/: Login.css  Login.jsx
src/LoginPage/: Login.jsx
src/Responsive/: mobile.css
src/SendingPage/: SendingPage.jsx
src/StockPage/: StockPage.jsx
src/TransportationPage/: TransportationPage.jsx
src/URL/: url.js
src/UserControlPage/: UserControlPage.jsx  user.css
src/api/: _apiURL.js  api-consumer.js  api.js  apiFinal.js  apideneme.js  base_api.js  gunluk-api.js  gunluk.js  kategori-api.js  kategori.js  kullanici.js  urun-api.js  urun.js  user-api.js
src/models/: manti.js  record.js  user.js
(+63 files in other folders)
