[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
opt-level = 3
overflow-checks = true
lto = true

[dependencies]
tokio ={ version = "1.0", features = ["full"]}
axum ={ version = "0.7"}
serde ={ version = "1.0", features = ["derive"]}
serde_json ={ version = "1.0"}
mongodb ={ version = "2.7.0"}